<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/tool_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FFEB3B">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/my_smart_home"
                android:textColor="@color/white"
                android:textSize="25sp"></TextView>
        </androidx.appcompat.widget.Toolbar>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="435dp"
                android:layout_height="60dp"
                android:background="#B1AFAF"
                android:text="@string/user_settings"

                android:textColor="#434141"
                android:textSize="25sp"></TextView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="78dp"
            android:background="@color/white"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="67dp"
                android:src="@drawable/circle_user"></ImageView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lillian"
                android:textColor="@color/black"
                android:textSize="25sp" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/prossylillian_gmail_com"
                    android:textColor="#686666"
                    android:textSize="15sp" />

            </LinearLayout>



        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:background="#B1AFAF"
            android:text="@string/home_settings"
            android:textColor="#434141"
            android:textSize="25sp" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="55dp"
                android:layout_height="40dp"
                android:src="@drawable/user" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/accounts_hubs"
                android:textColor="@color/black"
                android:textSize="25sp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="56dp"
                android:layout_height="40dp"
                android:src="@drawable/users" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:text="@string/clients"
                android:textColor="@color/black"
                android:textSize="25sp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="56dp"
                android:layout_height="40dp"
                android:src="@drawable/marker" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="51dp"
                android:text="@string/locations"
                android:textColor="@color/black"
                android:textSize="25sp" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="59dp"
            android:background="#B1AFAF"
            android:text="@string/voice"
            android:textColor="#434141"
            android:textSize="30sp" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="87dp"
                    android:layout_height="match_parent"
                    android:src=""/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="46dp"
                    android:text="@string/voice_assistants"
                    android:textColor="@color/black"
                    android:textSize="25sp" />
            </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="63dp"
            android:background="#B1AFAF"
            android:text="@string/app_permissions"
            android:textColor="#434141"
            android:textSize="30sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1014dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="81dp"
                android:layout_height="61dp"
                android:src="@drawable/settings" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="61dp"
                android:text="@string/noticifications_permissions"
                android:textColor="@color/black"
                android:textSize="23sp" />
        </LinearLayout>

        </LinearLayout>
</FrameLayout>