<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".IdeasFragment">

    <Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFEB3B">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/teko_semibold"
            android:text="@string/my_smart_home"
            android:textColor="@color/white"
            android:textSize="40sp">

        </TextView>
    </Toolbar>

    <TextView
        android:layout_width="364dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="6dp"
        android:layout_marginTop="65dp"
        android:layout_marginEnd="41dp"
        android:layout_marginBottom="610dp"
        android:text="@string/more_recommendations"
        android:textSize="30sp" />

    <TextView
        android:layout_width="349dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="11dp"
        android:layout_marginTop="109dp"
        android:layout_marginEnd="51dp"
        android:layout_marginBottom="574dp"
        android:text="@string/even_more_recommendations"
        android:textSize="25sp" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@mipmap/ic_launcher_round" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="99dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="164dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="468dp"
        android:text="@string/thanksgiving_dinner_ready"
        android:textColor="@color/white"
        android:textSize="35sp" />

    <TextView
        android:layout_width="365dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="262dp"
        android:layout_marginEnd="46dp"
        android:layout_marginBottom="429dp"
        android:text="@string/send_me_a_noticification"
        android:textColor="@color/white"
        android:textSize="30sp" />


</RelativeLayout>